--- a/app/src/main/res/layout-v26/main_menu.xml
+++ b/app/src/main/res/layout-v26/main_menu.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
@@ -43,8 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".3"
             android:onClick="loadConstraintLayout"
-            android:text="@string/constraintButton"
-            tools:text="Load" />
+            android:text="@string/constraintButton" />
 
     </LinearLayout>
 
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:onClick="loadtablelayout"
+            android:onClick="loadTableLayout"
             android:text="@string/tableLayoutButton" />
     </LinearLayout>
 
